# fltk_Emergence

./: CMakeLists.txt
plugins/: CMakeLists.txt  plugin.h
plugins/color/: CMakeLists.txt  color_node.cpp  color_node.h  color_node_item.cpp  color_node_item.h  color_plugin.cpp  hsv_node_items.cpp  hsv_node_items.h  hsv_nodes.cpp  hsv_nodes.h  rgb_node.cpp  rgb_node.h  rgb_node_item.cpp  rgb_node_item.h  rgb_node_items.cpp  rgb_node_items.h  rgb_nodes.cpp  rgb_nodes.h
plugins/compare/: CMakeLists.txt  compare_node_items.cpp  compare_node_items.h  compare_nodes.cpp  compare_nodes.h  compare_plugin.cpp  func_def.cpp  func_def.h  if_node.cpp  if_node.h  if_node_item.cpp  if_node_item.h
plugins/condition/: CMakeLists.txt  condition_plugin.cpp  if_node.cpp  if_node.h  if_node_item.cpp  if_node_item.h
plugins/gradient/: CMakeLists.txt  gradient.cpp  gradient.h  gradient_node.cpp  gradient_node.h  gradient_node_item.cpp  gradient_node_item.h  gradient_plugin.cpp
plugins/image/: CMakeLists.txt  image_node.cpp  image_node.h  image_node_item.cpp  image_node_item.h  image_plugin.cpp
plugins/io/: CMakeLists.txt  export_output.cpp  input_node.cpp  input_node.h  input_node_item.cpp  input_node_item.h  io_plugin.cpp  output_node.cpp  output_node.h  output_node_item.cpp  output_node_item.h  stb_image.h
plugins/logic/: CMakeLists.txt  func_def.cpp  func_def.h  logic_node_items.cpp  logic_node_items.h  logic_nodes.cpp  logic_nodes.h  logic_plugin.cpp
plugins/main/: CMakeLists.txt
plugins/main/io/: CMakeLists.txt  input_node.cpp  input_node.h  io_plugin.cpp
plugins/math/: CMakeLists.txt  complex_node.cpp  complex_node.h  complex_node_item.cpp  complex_node_item.h  func_def.cpp  func_def.h  lerp.h  lerp_node_items.cpp  lerp_node_items.h  lerp_nodes.cpp  lerp_nodes.h  math_node_items.cpp  math_node_items.h  math_nodes.cpp  math_nodes.h  math_plugin.cpp  real_chooser.cpp  real_chooser.h  real_node.cpp  real_node.h  real_node_item.cpp  real_node_item.h
plugins/types/: CMakeLists.txt
plugins/types/real/: CMakeLists.txt  real_t.cpp  real_t.h  real_t_plugin.h
src/: main.cpp
src/core/: CMakeLists.txt  bool_t.cpp  bool_t.h  color_t.cpp  color_t.h  data_t.cpp  data_t.h  load_plugin.cpp  load_plugin.h  node.cpp  node.h  plugin.cpp  plugin.h  plugin_system.h  plugin_t.h  real_t.cpp  real_t.h  resources.h  type_manager.cpp  type_manager.h
src/gui/: .node_item.cpp.swp  .node_item.h.swp  .workspace.h.swp  CMakeLists.txt  binary_save.cpp  binary_save.h  graphics_view.cpp  graphics_view.h  item.cpp  item.h  main_window.cpp  main_window.h  node_box.cpp  node_box.h  node_item.cpp  node_item.h  workspace.cpp  workspace.h
src/gui/toolbox/: toolbox.cpp  toolbox.h  toolbox_category.cpp  toolbox_category.h  toolbox_item.cpp  toolbox_item.h  toolbox_node_item.cpp  toolbox_node_item.h
src/gui/widgets/graphics_view/: graphics_view.cpp  item.h
src/gui/widgets/toolbox/: toolbox.h  toolbox_item.cpp
types/: CMakeLists.txt
types/bool/: CMakeLists.txt  bool_t.cpp  bool_t.h  bool_t_plugin.cpp
types/color/: CMakeLists.txt  color_t.cpp  color_t.h  color_t_plugin.cpp
types/complex/: CMakeLists.txt  complex_t.cpp  complex_t.h  complex_t_plugin.cpp
types/real/: CMakeLists.txt  real_t.cpp  real_t.h  real_t_plugin.cpp
